# DS_bootcamp_26_eda_workflow

./: README.md  example_usage.py  pyproject.toml
eda_workflow/: eda_workflow.py
eda_workflow/prompts/: extract_observations_system.txt
